# resume_refining

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  package.json  pyproject.toml  requirments-test.txt  requirments.txt
.github/workflows/: ci.yml
resume-refining/: index.html  package-lock.json  package.json  vite.config.ts
resume-refining/src/: App.tsx  UploadjobDescription.jsx
resume-refining/src/component/: Demo.tsx  Jobdescription.css  UploadJobDescription.tsx  UploadjobDescription.tsx  uploadescription.css
resume_refining/: api.py  hooks.py  modules.txt  test.py
resume_refining/api/: api.py
resume_refining/public/: node_modules
resume_refining/public/resume-refining/: index.html
resume_refining/public/resume-refining/assets/: index-1cqdHghL.js  index-6lFGOWda.js  index-84L8M_gY.js  index-973J46Lh.css  index-BIQ9l9pK.js  index-CA8bynCC.js  index-CBw7H2NJ.js  index-CFDDSzMQ.css  index-CG9Dym6i.css  index-CNVoVpYj.js  index-CWqkbR7q.js  index-Cq95P2EI.css  index-DORcRNjh.js  index-DYucOeaL.js  index-DZzKZJNc.css  index-DmcrOWUv.css  index-DnE6WAj4.js  index-DrENzErz.js  index-GQO71kHt.js  index-aCb8xr7y.js  index-zj4bwKG8.css
resume_refining/resume_refining/doctype/candidate_score/: candidate_score.json  candidate_score.py
resume_refining/resume_refining/doctype/shortlisted_candidates/: shortlisted_candidates.js  shortlisted_candidates.json  shortlisted_candidates.py  test_shortlisted_candidates.py
resume_refining/www/: resume-refining.html
