[project]
name = "resume_refining"
authors = [
    { name = "AT", email = "write-us@assimilatetechnologies.com"}
]
description = "to filter resume with skills & experiance"
requires-python = ">=3.9,<3.12"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "annotated-types==0.7.0",
    "blinker==1.8.2",
    "blis==1.0.1",
    "catalogue==2.0.10",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpathlib==0.19.0",
    "colorama==0.4.6",
    "confection==0.1.5",
    "cymem==2.0.8",
    "docx2txt==0.8",
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "langcodes==3.4.1",
    "language_data==1.2.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.1",
    "mdurl==0.1.2",
    "murmurhash==1.0.10",
    "numpy==2.0.2",
    "packaging==24.1",
    "preshed==3.0.9",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "Pygments==2.18.0",
    "PyPDF2==3.0.1",
    "requests==2.32.3",
    "rich==13.9.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "setuptools==75.1.0",
    "shellingham==1.5.4",
    "smart-open==7.0.5",
    "srsly==2.4.8",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.5",
    "typer==0.12.5",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "Werkzeug==3.0.4",
    "wrapt==1.16.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
black = "~=23.9.1"  # Example: code formatter
isort = "~=5.12.0"  # Example: import sorter

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
