[project]
name = "resume_refining"
authors = [
    { name = "AT", email = "write-us@assimilatetechnologies.com"}
]
description = "to filter resume with skills & experiance"
requires-python = ">=3.8,<3.12"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    
    "docx2txt~=0.8",
    "pypdf~=3.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    "requests~=2.32.3",
    "scikit-learn~=1.0",
    "scipy~=1.14.1",
    "spacy~=3.8.2",
    "tqdm~=4.66.5"
    "sentence_transformers~=2.2.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
black = "~=23.9.1"  # Example: code formatter
isort = "~=5.12.0"  # Example: import sorter

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
